--- a/aula_23_08_2023/vsconnect2/src/components/Footer/style.css
+++ b/aula_23_08_2023/vsconnect2/src/components/Footer/style.css
@@ -1,20 +1,20 @@
 /* FOOTER */
-footer {
-    background-image: 
-        linear-gradient( #06082170, #06082170),
-        url("../img/background_footer.png");
+#footer {
+    background-image:
+        linear-gradient(#06082170, #06082170),
+        url("../../assets/img/background_footer.png");
     background-size: cover;
     color: var(--branco);
 }
 
-.rodape {
+#footer .rodape {
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
 }
 
-.span_dicas {
+#footer .span_dicas {
     width: 100%;
     max-width: 860px;
     height: 300px;
@@ -30,7 +30,7 @@ footer {
     position: relative;
 }
 
-.span_dicas img {
+#footer .span_dicas img {
     position: absolute;
     top: -100px;
     left: 70px;
@@ -39,63 +39,63 @@ footer {
     /* width: 300px; */
 }
 
-.span_dicas_texto {
+#footer .span_dicas_texto {
     width: 52%;
     font-family: var(--font2);
     font-size: 24px;
     padding-right: 40px;
 }
 
-.span_dicas_texto p {
+#footer .span_dicas_texto p {
     margin-bottom: 30px;
 }
 
-.botao_dicas {
+#footer .botao_dicas {
     padding: 10px 50px;
     color: var(--azul);
     background-color: var(--branco);
 }
 
-.rodape>p {
+#footer .rodape>p {
     font-family: var(--font2);
     margin-bottom: 10px;
 }
 
-.rodape_conteudo {
+#footer .rodape_conteudo {
     width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 30px 0;
 }
 
-.rodape_conteudo h2 {
+#footer .rodape_conteudo h2 {
     font-size: 24px;
 }
 
-.rodape_conteudo>img {
+#footer .rodape_conteudo>img {
     width: 40%;
     max-width: 400px;
     min-width: 250px;
 }
 
-.rodape_conteudo_paginas ul {
+#footer .rodape_conteudo_paginas ul {
     font-family: var(--font2);
     font-size: 18px;
 }
 
-.rodape_conteudo_contatos {
+#footer .rodape_conteudo_contatos {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-end;
 }
 
-.rodape_conteudo_contatos img {
+#footer .rodape_conteudo_contatos img {
     width: 45px;
     margin: 10px;
 }
 
-.rodape_conteudo_contatos>a {
+#footer .rodape_conteudo_contatos>a {
     font-family: var(--font2);
     font-size: 18px;
     text-decoration: none;
@@ -105,27 +105,26 @@ footer {
 @media screen and (max-width: 768px) {
 
     /* FOOTER */
-    .span_dicas_texto{
+    #footer .span_dicas_texto {
         width: 90%;
         text-align: center;
     }
 
-    .rodape_conteudo{
+    #footer .rodape_conteudo {
         flex-direction: column;
         align-items: center;
     }
 
-    .rodape_conteudo_contatos{
+    #footer .rodape_conteudo_contatos {
         align-items: center;
         margin: 50px 0;
     }
 
-    .rodape_conteudo>img{
+    #footer .rodape_conteudo>img {
         order: -1;
     }
 
-    .rodape_conteudo_paginas{
+    #footer .rodape_conteudo_paginas {
         order: 1;
     }
 }
-
