--- a/aula_23_08_2023/vsconnect2/src/components/Header/style.css
+++ b/aula_23_08_2023/vsconnect2/src/components/Header/style.css
@@ -1,26 +1,26 @@
 
 /* HEADER */
-header {
+#header {
     background-color: var(--azulP);
 }
 
-.header_conteudo {
+#header .header_conteudo {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 80px;
 }
 
-.menu_barras {
+#header .menu_barras {
     display: none;
     z-index: 1;
 }
 
-.menu_barras>img {
+#header .menu_barras>img {
     width: 50px;
 }
 
-.barras{
+#header .barras{
     /* border-top: 5px solid var(--branco); */
     width: 40px;
     height: 5px;
@@ -32,7 +32,7 @@ header {
     transition: .5s;
 }
 
-.barras::after{
+#header .barras::after{
     content: '';
     display: block;
     width: 40px;
@@ -44,7 +44,7 @@ header {
     transition: .5s;
 }
 
-.barras::before{
+#header .barras::before{
     content: '';
     display: block;
     width: 40px;
@@ -56,27 +56,27 @@ header {
     transition: .5s;
 }
 
-.ativo .barras{
+#header .ativo .barras{
     /* background-color: transparent; */
     transform: rotate(135deg);
 }
 
-.ativo .barras::after{
+#header .ativo .barras::after{
     transform: rotate(-270deg);
     top: 0;
 }
 
-.ativo .barras::before{
+#header .ativo .barras::before{
     /* transform: rotate(90deg); */
     top: 0;
 }
 
-.header_logo {
+#header .header_logo {
     width: 50%;
     max-width: 220px;
 }
 
-header nav {
+#header nav {
     max-width: 550px;
     width: 60%;
     display: flex;
@@ -86,27 +86,27 @@ header nav {
     font-size: 18px;
 }
 
-header nav>div {
+#header nav>div {
     display: flex;
     justify-content: space-between;
     width: 65%;
 }
 
-header nav a {
+#header nav a {
     color: var(--branco);
     text-decoration: none;
     text-transform: uppercase;
     font-family: var(--font2);
 }
 
-.header_botao_login {
+#header .header_botao_login {
     border: 4px solid var(--rosa);
     padding: 4px 30px;
     border-radius: 30%;
     font-family: var(--font1);
 }
 
-.header_icone_login{
+#header .header_icone_login{
     display: none;
 }
 
@@ -114,15 +114,15 @@ header nav a {
 
 @media screen and (max-width: 768px) {
         /* HEADER */
-        .menu_barras {
+        #header .menu_barras {
             display: initial;
         }
     
-        .header_logo{
+        #header .header_logo{
             /* margin-left: 55px; */
         }
     
-        .menu_links {
+        #header .menu_links {
             /* display: none; */
             position: absolute;
             left: -300px;
@@ -143,27 +143,25 @@ header nav a {
             transition: all 0.5s ease;
         }
     
-        .menu_links * {
+        #header .menu_links * {
             margin: 10px 100px 10px 10px;
         }
     
-        header nav {
+        #header nav {
             /* justify-content: flex-end; */
             width: auto;
         }
     
-        .header_botao_login{
+        #header .header_botao_login{
             display: none;
         }
     
-        .header_icone_login {
+        #header .header_icone_login {
             display: flex;
         }
     
-        header nav svg {
+        #header nav svg {
             width: 35px;
             fill: var(--branco);
         }
-    
-
 }
